feat(ui): generate password with hardware

--- a/src/main/resources/fxml/new_password.fxml
+++ b/src/main/resources/fxml/new_password.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Button?>
+<?import org.cryptomator.ui.controls.FontAwesome5Spinner?>
 <VBox xmlns:fx="http://javafx.com/fxml"
 	  xmlns="http://javafx.com/javafx"
 	  fx:controller="org.cryptomator.ui.changepassword.NewPasswordController"
@@ -29,5 +31,16 @@
 		<Label text="%newPassword.reenterPassword" labelFor="$reenterField"/>
 		<NiceSecurePasswordField fx:id="reenterField"/>
 		<Label fx:id="passwordMatchLabel" styleClass="label-muted" alignment="CENTER_RIGHT" maxWidth="Infinity" graphicTextGap="6"/>
+
+		<Region />
+
+
+		<Button fx:id="passwordHardwareBtn" text="%addvaultwizard.new.generatePasswordHWBtn" onAction="#getHardwarePassword" maxWidth="Infinity">
+			<graphic>
+				<FontAwesome5Spinner fx:id="spinner" glyphSize="12" spinning="true" visible="false" />
+			</graphic>
+		</Button>
+
+
 	</children>
 </VBox>
