--- a/src/main/resources/fxml/unlock_enter_password.fxml
+++ b/src/main/resources/fxml/unlock_enter_password.fxml
@@ -54,15 +54,15 @@
 		</HBox>
 
 		<VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
-			<ButtonBar buttonMinWidth="120" buttonOrder="+CI">
+			<ButtonBar buttonOrder="+CI">
 				<buttons>
 					<Button text="%generic.button.cancel" ButtonBar.buttonData="CANCEL_CLOSE" cancelButton="true" onAction="#cancel" disable="${controller.userInteractionDisabled}"/>
-					<Button text="%unlock.unlockBtn" ButtonBar.buttonData="FINISH" defaultButton="true" onAction="#unlock" contentDisplay="${controller.unlockButtonContentDisplay}" disable="${controller.unlockButtonDisabled}">
+					<Button text="%unlock.unlockHWBtn" ButtonBar.buttonData="FINISH" onAction="#hwUnlock" contentDisplay="${controller.unlockButtonContentDisplay}" disable="${controller.unlockHWButtonDisabled}">
 						<graphic>
 							<FontAwesome5Spinner glyphSize="12" />
 						</graphic>
 					</Button>
-					<Button text="%unlock.unlockBtn" ButtonBar.buttonData="FINISH" defaultButton="false" onAction="#hwUnlock" contentDisplay="${controller.unlockButtonContentDisplay}" disable="false">
+					<Button text="%unlock.unlockBtn" ButtonBar.buttonData="FINISH" defaultButton="true" onAction="#unlock" contentDisplay="${controller.unlockButtonContentDisplay}" disable="${controller.unlockButtonDisabled}">
 						<graphic>
 							<FontAwesome5Spinner glyphSize="12" />
 						</graphic>
